# zed-discord-presence

./: .gitignore  Cargo.toml  README.md  extension.toml
.gimi/: config.toml
.github/: FUNDING.yml  README
.github/actions/check/: action.yml
.github/actions/install-rust/: action.yml
.github/workflows/: check.yml  gimi.yml  release.yml
assets/: NOTICE.md  languages.json
language_icons/: NOTICE.md
lsp/: Cargo.toml  README.md
lsp/src/: configuration.rs  discord.rs  document.rs  error.rs  git.rs  idle.rs  languages.rs  logger.rs  main.rs  util.rs
lsp/src/activity/: fields.rs  mod.rs
lsp/src/config/: activity.rs  idle.rs  mod.rs  rules.rs  update.rs
lsp/src/service/: mod.rs  presence_service.rs  workspace_service.rs
lsp/src/util/: mod.rs  placeholders.rs
scripts/: get_languages.sh
src/: discord_presence.rs
