[package]
name = "zed-discord-presence"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://git.sr.ht/~hyro/zed-discord-presence"

[lib]
path = "src/discord_presence.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"

[workspace]
members = ["lsp"]

[lints]
[lints.clippy]
correctness = "deny"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "deny"
pedantic = "warn"
