[package]
name = "discord-presence-lsp"
version = "0.8.3"
edition = "2021"

[lints]
workspace = true

[dependencies]
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git", rev = "eab0b36bd35c5f58cdb8580ab4fdc01f8ff82414" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "io-std", "macros", "time"] }
tower-lsp = "0.20.0"
git2 = { version = "0.19.0", default-features = false }
serde_json = { version = "1.0.122", features = ["std"] }
regex = { version = "1.10.6", default-features = false, features = ["std", "perf", "unicode-case", "unicode-perl"] }
urlencoding = "2.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
